--- a/app/src/main/res/layout/activity_store_details.xml
+++ b/app/src/main/res/layout/activity_store_details.xml
@@ -6,12 +6,16 @@
     <data>
 
         <variable
-            name="mainVm"
-            type="com.kklv.mytest.MainActivity.MainActivityStates" />
+            name="StoreDetailsVm"
+            type="com.kklv.mytest.ui.page.StoreDetailsActivity.StoreDetailsActivityStates" />
 
         <variable
             name="click"
-            type="com.kklv.mytest.MainActivity.ClickProxy" />
+            type="com.kklv.mytest.ui.page.StoreDetailsActivity.ClickProxy" />
+
+        <variable
+            name="infoData"
+            type="com.kklv.mytest.data.bean.StoreDetailsBean" />
 
     </data>
 
@@ -19,27 +23,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".MainActivity">
+        tools:context=".ui.page.StoreDetailsActivity">
 
         <TextView
-            android:id="@+id/tvClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{()->click.goToStoreDetailsActivity()}"
             android:padding="30dp"
-            android:text="@{mainVm.showText}"
+            android:text="click"
+            android:onClick="@{()->click.refresh()}"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#ff0000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:visibleOrGone="@{mainVm.isShow}" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
+
+
