--- a/app/src/main/res/layout/activity_store_details.xml
+++ b/app/src/main/res/layout/activity_store_details.xml
@@ -412,7 +412,7 @@
                         android:background="@color/white"
                         android:paddingTop="8dp"
                         android:paddingBottom="8dp"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:layout_constraintTop_toBottomOf="@id/clStoreInfo"
                         app:spanCount="5"
                         tools:itemCount="8" />
