--- a/app/src/main/res/layout/activity_store_details.xml
+++ b/app/src/main/res/layout/activity_store_details.xml
@@ -430,6 +430,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_marginTop="8dp"
+                app:navigator="@{vm.tabData}"
                 android:background="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/rvNavigation" />
         </com.google.android.material.appbar.AppBarLayout>
