--- a/app/src/main/res/layout/skeleton_activity_store_details.xml
+++ b/app/src/main/res/layout/skeleton_activity_store_details.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/light_transparent"
+        android:background="@color/color_skeleton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintDimensionRatio="375:152"
         android:layout_height="0dp"/>
