--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,11 +6,16 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.kklv.mytest.ui.page.HomeFragment"
-        android:label="HomeFragment" >
+        android:label="HomeFragment">
         <action
             android:id="@+id/action_homeFragment_to_storeDetailsFragment"
-            app:destination="@id/storeDetailsFragment" />
+            app:destination="@id/storeDetailsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
+
     <fragment
         android:id="@+id/storeDetailsFragment"
         android:name="com.kklv.mytest.ui.page.StoreDetailsFragment"
