--- a/app/src/main/res/layout/item_visit.xml
+++ b/app/src/main/res/layout/item_visit.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="data"
             type="com.kklv.mytest.data.bean.VisitBean" />
@@ -17,9 +18,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:paddingBottom="10dp"
         app:bl_corners_radius="8dp"
-        app:bl_solid_color="@color/white"
-        android:paddingBottom="10dp">
+        app:bl_solid_color="@color/white">
 
         <TextView
             android:id="@+id/tvType"
@@ -33,10 +34,10 @@
             android:paddingHorizontal="4dp"
             android:textColor="#4583FE"
             android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:bl_corners_radius="4dp"
             app:bl_solid_color="#e5eeff"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="商户" />
 
         <TextView
@@ -47,8 +48,8 @@
             android:layout_marginEnd="16dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="#353637"
             android:text="@{data.visit_obj_name}"
+            android:textColor="#353637"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/tvType"
@@ -60,8 +61,8 @@
         <ImageView
             android:id="@+id/ivTag"
             android:layout_width="28dp"
-            app:imgUrl="@{data.store_level}"
             android:layout_height="28dp"
+            app:imgUrl="@{data.store_level}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,8 +73,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:singleLine="true"
-            android:textColor="#949495"
             android:text='@{"拜访时间："+data.create_time}'
+            android:textColor="#949495"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvType"
@@ -85,14 +86,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="4dp"
-            android:text='@{data.total_visit+"/"+data.user_total_visit}'
             android:gravity="center"
-            app:bl_corners_radius="4dp"
-            app:bl_solid_color="#f5f6f7"
             android:paddingHorizontal="4dp"
             android:paddingVertical="2dp"
+            android:text='@{data.total_visit+"/"+data.user_total_visit}'
             android:textColor="#353637"
             android:textSize="10sp"
+            app:bl_corners_radius="4dp"
+            app:bl_solid_color="#f5f6f7"
             app:layout_constraintBottom_toBottomOf="@id/tvTime"
             app:layout_constraintStart_toEndOf="@id/tvTime"
             app:layout_constraintTop_toTopOf="@id/tvTime"
@@ -104,8 +105,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:text='@{"拜访人："+data.visit_user}'
             android:singleLine="true"
+            android:text='@{"拜访人："+data.visit_user}'
             android:textColor="#949495"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,13 +123,25 @@
             android:ellipsize="end"
             android:maxLines="3"
             android:text="@{data.visit_note}"
-            app:isVisible="@{data.visit_note != null &amp;&amp; data.visit_note.length() != 0}"
             android:textColor="#646566"
             android:textSize="12sp"
+            app:isVisible="@{data.visit_note != null &amp;&amp; data.visit_note.length() != 0}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvVisitor"
             tools:text="这个客户因为电费发生来纠纷，谈费用不考虑与怪兽合作，我们的对策是申请免费投放广告，看公司…" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTag"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvContent"
+            tools:itemCount="3" />
 
         <TextView
             android:id="@+id/tvAddComment"
@@ -136,8 +149,6 @@
             android:layout_height="18dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
-            app:bl_corners_radius="4dp"
-            app:bl_solid_color="#00d17f"
             android:drawableStart="@drawable/icon_add_comment"
             android:drawablePadding="2dp"
             android:gravity="center"
@@ -145,8 +156,10 @@
             android:text="添加评论"
             android:textColor="@color/white"
             android:textSize="10sp"
+            app:bl_corners_radius="4dp"
+            app:bl_solid_color="#00d17f"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvContent" />
+            app:layout_constraintTop_toBottomOf="@id/rvTag" />
 
         <View
             android:id="@+id/tvAddCommentClick"
