--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="color_666666">#666666</color>
     <color name="color_333333">#333333</color>
     <color name="color_15c782">#15c782</color>
+    <color name="color_6015c782">#9915c782</color>
     <color name="color_skeleton">#DDDDDD</color>
 </resources>
