骨架屏结合StateLayout

--- a/app/src/main/res/layout/fragment_store_details.xml
+++ b/app/src/main/res/layout/fragment_store_details.xml
@@ -19,7 +19,8 @@
 
     </data>
 
-    <FrameLayout
+    <com.drake.statelayout.StateLayout
+        android:id="@+id/stateLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -489,7 +490,8 @@
             </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
-    </FrameLayout>
+
+    </com.drake.statelayout.StateLayout>
 
 </layout>
 
