--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/storeDetailsFragment">
+    app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.kklv.mytest.ui.page.HomeFragment"
@@ -20,4 +20,14 @@
         android:id="@+id/storeDetailsFragment"
         android:name="com.kklv.mytest.ui.page.StoreDetailsFragment"
         android:label="StoreDetailsFragment" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.kklv.mytest.ui.page.LoginFragment"
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_storeDetailsFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"
+            app:destination="@id/storeDetailsFragment" />
+    </fragment>
 </navigation>
